# msfabric-solution-catalog

./: .gitignore  CONTRIBUTING.md  README.md  STANDARDS.md  UI.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  catalog.yml  feature.yml
.github/workflows/: deploy-pages.yml  deploy.yaml  gci-python-matrix.yml  publish-pypi.yml
contrib/: bootstrap-ci.sh
docs/_site/: index.html
src/msfabric_solution_catalog/: CONTRIBUTING.md  README.md  STANDARDS.md  bootstrap-python.ps1  hatch_build.py  project.json  pyproject.toml
src/msfabric_solution_catalog/.github/workflows/: publish-pypi.yml
src/msfabric_solution_catalog/dev/: test_example.ipynb
src/msfabric_solution_catalog/msfabric_solution_catalog/: __init__.py  constants.py  core.py  installer.py  registry.py  telemetry.py  utils.py
src/msfabric_solution_catalog/msfabric_solution_catalog/catalogs/community/: fabric-cost-analysis.yml  real-time-manufacturing.yml
src/msfabric_solution_catalog/msfabric_solution_catalog/catalogs/core/: analytics-roadshow-lab.yml  banking-loan-fraud.yml  fabcon-rti-workshop.yml  fabric-tenant-monitoring.yml  fpm-activity-events.yml  fpm-capacity-events.yml  fpm-fabric-inventory.yml  fpm-gateway-monitoring.yml  fpm-workspace-item-events.yml  grid-intelligence.yml  healthcare-billing-system.yml  materialized-lake-views.yml  multivariate-anomaly-detection.yml  retail-sales.yml  spark-monitoring-and-optimization.yml  stateful-streaming-lakehouse.yml  stateful-streaming-rocksdb.yml  telecom-call-data-records.yml
src/msfabric_solution_catalog/msfabric_solution_catalog/ui/: __init__.py  catalog.js  catalog.py  conflict_resolver.py  formatting.py  install_status.py  ui.css
src/msfabric_solution_catalog/tests/: schemas.py  test_credential.py  test_installer.py  test_instance_name.py  test_registry.py  test_telemetry.py  test_upload.py  test_workload_icons.py
src/msfabric_solution_catalog_web/: CONTRIBUTING.md  README.md  next.config.mjs  package.json  project.json
tools/: render-diagrams.ts
(+51 files in other folders)
