[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msfabric-solution-catalog"
authors = [{ name = "Microsoft Corporation" }]
version = "0.1.12"
description = "Get started quickly with pre-built solutions, tutorials, demos, and accelerators—automated, high-quality, and open-source."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
urls.Repository = "https://github.com/dcnsakthi/msfabric-solution-catalog.git"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fabric-cicd==1.1.0", # for testing local build: "fabric-cicd @ file:///C:/.../fabric-cicd/dist/fabric_cicd-0.1.34-py3-none-any.whl",
    "ipython>=8.20.0",
    "pyyaml>=6.0.2",
]

[tool.hatch.build]
include = ["msfabric_solution_catalog/**/*.py", "msfabric_solution_catalog/catalogs/**/*", "msfabric_solution_catalog/ui/**/*"]

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["msfabric_solution_catalog"]

[tool.hatch.metadata]
allow-direct-references = true


[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "ruff>=0.14.10",
    "ty==0.0.14",
]
test = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]

[tool.ruff]
src = ["."]
# Ignore packaged catalog payloads (e.g., demo notebooks) to keep lint focused on library code.
extend-exclude = ["msfabric_solution_catalog/catalogs/**"]

[tool.ty.environment]
root = ["."]

[tool.ty.src]
# Skip type checking for test helpers that rely on dynamic imports/aliases
# and the build hook which depends on hatchling (a build-only dependency).
exclude = [
    "tests/test_instance_name.py",
    "msfabric_solution_catalog/catalogs/**",
    "hatch_build.py",
]



